--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,10 @@
 		font: 24px Georgia, serif;
 		}
 		
+	h3 {
+		margin-bottom: 10px;
+		}
+		
 	h4 {
 		margin-bottom: 5px;
 		}
@@ -57,12 +61,16 @@
 		clear: both;
 		}
 		
-	article {
-		margin-top: 30px;
+	article,
+	aside {
+		margin-bottom: 30px;
 		clear: both;
 		float: left;		
 		}
 		
+	aside img {
+		margin-bottom: 5px;
+		}
 	a {
 		text-decoration: none;
 		color: #000000;
