--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 	html {}
 	
 	body {
-		font: 14px Helvetica, Arial, sans-serif;
-		
+		font: 14px/1.3 "ff-meta-web-pro-1","ff-meta-web-pro-2", sans-serif;
+		color: #333333;
 		}
 	
 	header {
@@ -37,21 +37,35 @@
 		margin-right: 0;
 		}
 		
+	nav#sub ul li {
+		list-style-image: url('../img/arrow_bullet.png');
+		margin-bottom: 10px;
+		font-size: 16px !important;
+		}
+		
 	#hero {
 		margin-bottom: 30px;
 		margin-top: -30px;
 		}
 		
 	h2 {
-		font: 24px Georgia, serif;
+		font: 24px "warnock-pro-1","warnock-pro-2", serif;
 		}
 		
 	h3 {
+		font-weight: normal;
 		margin-bottom: 10px;
+		font-size: 16px;
 		}
 		
 	h4 {
+		font-weight: normal;
 		margin-bottom: 5px;
+		color: #F36235;
+		}
+		
+	h5 {
+		font-weight: normal;
 		}
 		
 	hr {
@@ -71,9 +85,14 @@
 	aside img {
 		margin-bottom: 5px;
 		}
+		
+	aside p {
+		font-size: 12px;
+		}
+		
 	a {
 		text-decoration: none;
-		color: #000000;
+		color: #333333;
 		}
 		
 	a:hover {
