--- a/css/style.css
+++ b/css/style.css
@@ -1,150 +1,170 @@
 	html {}
 	
 	body {
-		font: 14px/1.3 "ff-meta-web-pro-1","ff-meta-web-pro-2", sans-serif;
-		color: #333333;
-		}
-	
-	header {
-		background-color: #F36235;
-		color: #FFFFFF;
-		height: 110px;
+		font: 12px "ff-meta-web-pro-1", "ff-meta-web-pro-2", sans-serif;
 		width: 100%;
 		}
 		
-	header a {
-		color: #FFFFFF;
+	header {
+		border-bottom: 2px solid #B1B1B1;
+		border-top: 2px solid #E45F46;
+		width: 100%;
+		float: left;
 		}
 		
 	footer {
-		background: #DEDEDE;
-		min-height: 110px;
+		background: #DFDFDF;
+		min-height: 200px;
 		width: 100%;
 		float: left;
 		}
-		
-	#news {
-		margin-top: 40px;
-		float: left;
-		}
-		
-	h1 {
-		background: url('../img/logo.png');
-		text-indent: -9999px;
-		margin-top: 20px;
-		height: 55px;
-		width: 110px;
-		}
-		
+	
+/* Global Navigation */
 	nav#global {
+		text-transform: uppercase;
+		margin-right: 60px;
 		float: right;
 		}
 		
-	nav#global ul li {
-		-webkit-transition: background 0.2s ease-in-out;
-		border-left: 1px solid #F2A919;
-		padding: 40px 10px 5px 10px;
-		height: 100%;
-		width: 70px;
-		float: left;
-		}
-		
-	nav#global ul li.long {
-		width: 100px;
-		}
-		
-	nav#global ul li:hover {
-		background: #F49308;
-		}
-		
-	nav#global ul a {
-		float: left;
-		}
-		
-	nav#global ul a:hover {
-		color: #FFFFFF;
-		}
-		
-	nav#global ul li:first-child {
-		border-left: 1px solid #F2A919 !important;
-		}
-		
-	nav#global ul li:last-child {
-		margin-right: 0;
-		}
-		
-	nav#sub ul li {
-		list-style-image: url('../img/arrow_bullet.png');
-		font-size: 16px !important;
-		margin-bottom: 10px;
-		}
-		
-	#hero {
-		margin-bottom: 30px;
-		margin-top: -30px;
-		}
-		
-	h2 {
-		font: 24px "warnock-pro-1","warnock-pro-2", serif;
-		}
-		
-	h3 {
-		border-bottom: 1px solid #CCCCCC;
-		padding-bottom: 10px;
-		font-weight: normal;
-		margin-bottom: 20px;
-		font-size: 14px;
-		width: 100%;
-		}
-		
-	h4 {
-		font-weight: normal;
-		margin-bottom: 5px;
-		font-size: 16px;
-		}
-		
-	h4 a,
-	h5 a {
-		color: #F36235;
-		}
-		
-	h4 a:hover,
-	h5 a:hover {
-		color: #B94929;
-		}
-		
-	h5 {
-		font-weight: normal;
-		}
-		
-	hr {
-		margin: 30px 0 30px 10px;
-		width: 940px;
-		float: left;
-		clear: both;
-		}
-		
-	article,
-	aside {
-		margin-bottom: 30px;
-		clear: both;
-		float: left;		
-		}
-		
-	aside img {
-		margin-bottom: 5px;
-		}
-		
-	aside p {
-		font-size: 12px;
-		}
-		
-	a {
-		-webkit-transition: color 0.2s ease-in-out;
-		text-decoration: none;
+	nav#global a {
 		color: #333333;
 		}
 		
-	a:hover {
-		color: #000000; 
+	nav#global a:hover {
+		color: #FFFFFF;
 		}
+		
+	nav#global li {
+		-webkit-transition: all 0.2s ease-in-out;
+		text-align: center;
+		padding: 5px 10px;
+		float: left;
+		width: 90px;
+		}
+		
+	nav#global li:hover {
+		background: #E45F46;
+		}
+	
+/* Logo */
+	div#hero div#logo {
+		background: #E45F46;
+		position: absolute;
+		padding-top: 20px;
+		height: 60px;
+		width: 170px;
+		z-index: 2;
+		top: 30px;
+		}
+		
+/* Heroes */
+	div#hero {
+		position: relative;
+		}
+		
+	div#hero div#hero-1 {
+		background: #66665E;
+		width: 100%;
+		}
+		
+	div#hero div#hero-1 img {
+		margin: 0 auto;
+		display: block;
+		width: 789px;
+		}
+	
+/* Content */
+	div#content {
+		margin-top: 20px;
+		width: 100%;
+		float: left;
+		clear: both;
+		}
+
+/* News */
+	div#news {
+		width: 740px;
+		float: left;
+		}
+		
+	article {
+		position: relative;
+		}
+		
+	article img {
+		position: absolute;
+		z-index: -1;
+		}
+		
+	article.special div {
+		width: 480px;
+		}
+		
+	article.special:first-child div {
+		margin-top: 60px;
+		}
+		
+	article div {
+		background: #FFFFFF;
+		margin-left: 180px;
+		padding: 20px 20px 10px 25px;
+		width: 340px;
+		float: left;
+		}
+		
+	article.special div h2 {
+		font-size: 21px;
+		}
+		
+	article.special div p {
+		font-size: 14px;
+		}
+	
+	article div h2 {
+		font-size: 16px;
+		}
+		
+/* Relativity Bar */
+	div#relativity {
+		background: url('../img/pattern.png') repeat;
+		padding: 20px 0 20px 20px;
+		margin: -20px 60px 0 0;
+		min-height: 500px;
+		height: 100%;
+		width: 260px;
+		float: right;
+		}
+		
+	div#relativity aside {
+		background: #E5ECFA;
+		margin-bottom: 20px;
+		min-height: 40px;
+		padding: 15px;
+		width: 230px;
+		}
+	
+	
+	a {
+		-webkit-transition: color 0.2s ease-in-out;
+		text-decoration: none;
+		color: #E45F46;
+		}
+		
+	a:hover {
+		color: #b75340;
+		}
+		
+	h1 {
+		background: url('../img/logo.png') no-repeat;
+		text-indent: -9999px;
+		margin: 0 auto;
+		height: 43px;
+		width: 85px;
+		}
+		
+	h2 {
+		font-weight: normal;
+		}
+	h3 {}
+	h4 {}
+	p {}
