--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,6 @@
 		width: 100%;
 		}
 		
-	header#intranet {
-		background-color: #ffc928;
-		}
-		
 	header a {
 		color: #FFFFFF;
 		}
@@ -151,4 +147,116 @@
 		
 	a:hover {
 		color: #000000; 
+		}
+		
+/* Intranet */
+	header#intranet {
+		background-color: #ffc928;
+		height: 90px;
+		}
+		
+	#top {
+		margin-top: 20px;
+		}
+		
+	#top h3 {
+		margin-bottom: 10px;
+		}
+		
+	#top ul { 
+		margin-top: -10px;
+		}
+		
+	#top ul li a {
+		color: #F36235;
+		width: 100%;
+		}
+		
+	#top ul li {
+		-webkit-transition: all 0.2s ease-in-out;
+		padding: 8px 5px 10px 5px;
+		list-style: none;
+		font-size: 12px;
+		}
+		
+	#top ul li:hover {
+		background: #ffdf7b;
+		}
+		
+	#top ul li:hover a {
+		color: #B94929;
+		}
+		
+	#top ul li:hover time {
+		color: #000000;
+		}
+		
+	time {
+		font-size: 12px;
+		color: #666666;
+		float: right;
+		}
+		
+	section#classes {
+		position: relative;
+		margin-top: 40px;
+		clear: both;
+		}
+		
+	section#classes span.period {
+		position: absolute;
+		font-size: 12px;
+		color: #666666;
+		float: right;
+		right: 0;
+		top: 2px;
+		}
+	
+	span.period a {
+		color: #F36235;
+		}
+		
+	span.period a:hover {
+		color: #B94929;
+		}
+		
+	span.period span.separator {
+		padding-right: 1px;
+		font-size: 8px;
+		}
+
+	section#classes ul li {
+		margin-right: 20px;
+		list-style: none;
+		float: left;
+		}
+		
+	section#classes ul li span {
+		-webkit-transition: color 0.3s ease-in-out;
+		}
+		
+	section#classes ul a li:hover span.class {
+		color: #B94929;
+		}
+		
+	section#classes ul a:nth-child(4n+4) li {
+		margin-right: 0;
+		}
+		
+	section#classes ul li img {
+		float: left;
+		}
+		
+	section#classes ul li span {
+		float: left;
+		clear: both;
+		}
+		
+	section#classes ul li span.class {
+		color: #F36235;
+		}
+		
+	section#classes ul li span.professor {
+		font-size: 12px;
+		color: #666666;
 		}
