--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
-	html {}
+	html {
+		height: 100%;
+		}
 	
 	body {
 		font: 14px/1.3 "ff-meta-web-pro-1","ff-meta-web-pro-2", sans-serif;
 		color: #333333;
+		height: 100%;
 		}
 	
 	header {
@@ -14,6 +17,7 @@
 		
 	header#intranet {
 		background-color: #ffc928;
+		height:90px;
 		}
 		
 	header a {
@@ -22,9 +26,10 @@
 		
 	footer {
 		background: #DEDEDE;
-		min-height: 110px;
 		width: 100%;
 		float: left;
+		bottom: 0px;
+		position: relative;
 		}
 		
 	#news {
@@ -39,7 +44,10 @@
 		height: 55px;
 		width: 110px;
 		}
-		
+	#intranet h1{
+		background: url('../img/intranet_logo.png');
+		width: 250px;
+		}	
 	nav#global {
 		float: right;
 		}
@@ -47,14 +55,10 @@
 	nav#global ul li {
 		-webkit-transition: background 0.2s ease-in-out;
 		border-left: 1px solid #F2A919;
-		padding: 40px 10px 5px 10px;
+		padding: 40px 30px 5px 10px;
 		height: 100%;
-		width: 70px;
+/* 		width: 70px; */
 		float: left;
-		}
-		
-	nav#global ul li.long {
-		width: 100px;
 		}
 		
 	nav#global ul li:hover {
@@ -77,12 +81,83 @@
 		margin-right: 0;
 		}
 		
+	nav#global ul img{
+		float: left;
+		margin-right: 5px;
+		border: 2px solid white;
+		}
+		
 	nav#sub ul li {
 		list-style-image: url('../img/arrow_bullet.png');
 		font-size: 16px !important;
 		margin-bottom: 10px;
 		}
 		
+	#contentwrapper{
+		min-height: 100%;
+		height: auto !important;
+		height: 100%;
+		margin: 0 auto -6em;
+		}
+	footer, #push{
+		height: 6em;
+		}
+		
+	#profile {
+		margin-top:60px;
+		}
+		
+	#profile img{
+		float:left;
+		margin-right: 10px;
+		}
+		
+	#profile div#username{
+		font-size: 32px;
+		}
+			
+	#profile form{
+		margin-top:30px;
+		}
+			
+	#profile form input{
+		font: 12px "Lucida Grande","Tahoma", sans-serif;
+		float: left;
+		border: 1px solid #999;
+		padding:7px 5px 7px 5px;
+		-moz-border-radius: 2px; 
+	   -webkit-border-radius: 2px; 
+	   border-radius: 2px;
+	   width: 350px;
+	   margin-bottom: 10px;
+	}
+	
+	#profile form textarea{
+		font: 12px/1.5 "Lucida Grande","Tahoma", sans-serif;
+		float: left;
+		border: 1px solid #999;
+		padding:7px 5px 7px 5px;
+		-moz-border-radius: 2px; 
+	   -webkit-border-radius: 2px; 
+	   border-radius: 2px;
+	   width: 350px;
+	   margin-bottom: 15px;
+		height:125px;
+		resize:none;
+		}
+	
+	#profile form label{
+		width:150px;
+		float:left;
+		position: relative;
+		top:6px;
+	}
+	
+	#profile form a#add{
+		float:left;
+		display: inline-table;
+	}
+	
 	#hero {
 		margin-bottom: 30px;
 		margin-top: -30px;
@@ -92,6 +167,11 @@
 		font: 24px "warnock-pro-1","warnock-pro-2", serif;
 		}
 		
+	h2.intranet{
+		margin-top: 50px;
+		font: 24px "ff-meta-web-pro-1","ff-meta-web-pro-2",sans-serif;
+		}
+	
 	h3 {
 		border-bottom: 1px solid #CCCCCC;
 		padding-bottom: 10px;
