--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,7 @@
 		-webkit-transition: color 0.3s ease-in-out;
 		}
 		
-	section#classes ul a li:hover span.class {
+	section#classes ul a li:hover span.studio {
 		color: #B94929;
 		}
 		
@@ -339,7 +339,7 @@
 		clear: both;
 		}
 		
-	section#classes ul li span.class {
+	section#classes ul li span.studio {
 		margin: 6px 0 2px;
 		color: #F36235;
 		}
@@ -394,7 +394,7 @@
 		float: right;
 		}
 		
-	.class {
+	.studio {
 		position: relative;
 		height: 140px;
 		width: 220px;
@@ -410,7 +410,7 @@
 		opacity: 0;
 		}
 		
-	.class:hover .overlay {
+	.studio:hover .overlay {
 		cursor: pointer;
 		display: block;
 		opacity: 0.7;
