--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,17 @@
+/**
+ * School of Design Redesign
+ * Interaction Prototype
+ *
+ * Justin Edmund and David Yen
+ * Spring 2011
+ *
+ */
+
+/**
+ * Page Structure
+ *
+ */
+ 
 	html {
 		height: 100%;
 		}
@@ -15,28 +29,37 @@
 		width: 100%;
 		}
 		
-	header a {
-		color: #FFFFFF;
+	#hero {
+		margin-bottom: 30px;
+		margin-top: -30px;
 		}
 		
 	footer {
 		background: #DEDEDE;
+		position: relative;
 		width: 100%;
 		float: left;
 		bottom: 0px;
-		position: relative;
 		}
 		
-	#news {
-		margin-top: 40px;
-		float: left;
+	/* Sticky Footer */
+	#wrapper {
+		height: auto !important;
+		margin: 0 auto -6em;
+		min-height: 100%;
+		height: 100%;
 		}
 		
-	ul.inline li {
-		list-style: none;
-		display: inline;
+	footer, #push {
+		height: 6em;
 		}
-		
+	
+/**
+ * Top-level Visuals
+ *
+ */
+ 
+  /* School of Design Logo */
 	h1 {
 		background: url('../img/logo.png');
 		text-indent: -9999px;
@@ -44,126 +67,11 @@
 		height: 55px;
 		width: 110px;
 		}
-		
-	#intranet h1{
+ 
+  /* Intranet Logo */
+	h1.intranet {
 		background: url('../img/intranet_logo.png');
 		width: 250px;
-		}	
-		
-	nav#global {
-		float: right;
-		}
-		
-	nav#global ul li {
-		-webkit-transition: background 0.2s ease-in-out;
-		border-left: 1px solid #F2A919;
-		padding: 40px 30px 5px 10px;
-		height: 100%;
-/* 		width: 70px; */
-		float: left;
-		}
-		
-	nav#global ul li:hover {
-		background: #F49308;
-		}
-		
-	nav#global ul a {
-		float: left;
-		}
-		
-	nav#global ul a:hover {
-		color: #FFFFFF;
-		}
-		
-	nav#global ul li:first-child {
-		border-left: 1px solid #F2A919 !important;
-		}
-		
-	nav#global ul li:last-child {
-		margin-right: 0;
-		}
-		
-	nav#global ul img{
-		float: left;
-		margin-right: 5px;
-		border: 2px solid white;
-		}
-		
-	nav#sub ul li {
-		list-style-image: url('../img/arrow_bullet.png');
-		font-size: 16px !important;
-		margin-bottom: 10px;
-		}
-		
-	#contentwrapper{
-		min-height: 100%;
-		height: auto !important;
-		height: 100%;
-		margin: 0 auto -6em;
-		}
-		
-	footer, #push{
-		height: 6em;
-		}
-		
-	#profile {
-		margin-top:60px;
-		}
-		
-	#profile img{
-		float:left;
-		margin-right: 10px;
-		}
-		
-	#profile div#username{
-		font-size: 32px;
-		}
-			
-	#profile form{
-		margin-top:30px;
-		}
-			
-	#profile form input{
-		font: 12px "Lucida Grande","Tahoma", sans-serif;
-		float: left;
-		border: 1px solid #999;
-		padding:7px 5px 7px 5px;
-		-moz-border-radius: 2px; 
-	   -webkit-border-radius: 2px; 
-	   border-radius: 2px;
-	   width: 350px;
-	   margin-bottom: 10px;
-		}
-	
-	#profile form textarea{
-		font: 12px/1.5 "Lucida Grande","Tahoma", sans-serif;
-		float: left;
-		border: 1px solid #999;
-		padding:7px 5px 7px 5px;
-		-moz-border-radius: 2px; 
-	   -webkit-border-radius: 2px; 
-	   border-radius: 2px;
-	   width: 350px;
-	   margin-bottom: 15px;
-		height:125px;
-		resize:none;
-		}
-	
-	#profile form label{
-		width:150px;
-		float:left;
-		position: relative;
-		top:6px;
-		}
-	
-	#profile form a#add{
-		float:left;
-		display: inline-table;
-		}
-	
-	#hero {
-		margin-bottom: 30px;
-		margin-top: -30px;
 		}
 		
 	h2 {
@@ -234,6 +142,134 @@
 		
 	a:hover {
 		color: #000000; 
+		}
+		
+	header a {
+		color: #FFFFFF;
+		}
+			
+	#news {
+		margin-top: 40px;
+		float: left;
+		}
+	
+	/* If you ever need a semantically generic inline list, use this. */
+	ul.inline li {
+		list-style: none;
+		display: inline;
+		}
+		
+/**
+ * Top-level Navigation
+ *
+ */
+ 	
+	nav#global {
+		float: right;
+		}
+	
+	nav#global ul a {
+		float: left;
+		}
+		
+	nav#global ul a:hover {
+		color: #FFFFFF;
+		}
+		
+	nav#global ul img {
+		border: 2px solid white;
+		margin-right: 5px;
+		float: left;
+		}
+		
+	nav#global ul li {
+		/* width: 70px; */ /* why is this commented? */
+		-webkit-transition: background 0.2s ease-in-out;
+		border-left: 1px solid #F2A919;
+		padding: 40px 30px 5px 10px;
+		height: 100%;
+		float: left;
+		}
+		
+	nav#global ul li:hover {
+		background: #F49308;
+		}
+		
+	nav#global ul li:first-child {
+		border-left: 1px solid #F2A919 !important;
+		}
+		
+	nav#global ul li:last-child {
+		margin-right: 0;
+		}
+		
+	/* Post-hero sub-navigation options on Index */
+	nav#sub ul li {
+		list-style-image: url('../img/arrow_bullet.png');
+		font-size: 16px !important;
+		margin-bottom: 10px;
+		}
+		
+/**
+ * Intranet
+ * Edit Profile
+ *
+ */		
+	#profile {
+		margin-top: 60px;
+		}
+		
+	#profile img {
+		float:left;
+		margin-right: 10px;
+		}
+		
+	#profile div#username {
+		font-size: 32px;
+		}
+			
+	#profile form {
+		margin-top: 30px;
+		}
+			
+	#profile form input {
+	  -webkit-border-radius: 2px;
+		-moz-border-radius: 2px;
+		border-radius: 2px;
+		
+		font: 12px "Lucida Grande","Tahoma", sans-serif;
+		padding:7px 5px 7px 5px;
+		border: 1px solid #999;
+		margin-bottom: 10px;
+		width: 350px;
+		float: left;
+		}
+	
+	#profile form textarea {
+	  -webkit-border-radius: 2px;
+		-moz-border-radius: 2px;
+	  border-radius: 2px;
+
+		font: 12px/1.5 "Lucida Grande","Tahoma", sans-serif;
+		padding:7px 5px 7px 5px;
+		border: 1px solid #999;
+		margin-bottom: 15px;
+		height: 125px;
+	  width: 350px;
+		resize: none;
+		float: left;
+		}
+	
+	#profile form label {
+		position: relative;
+		width: 150px;
+		float: left;
+		top: 6px;
+		}
+	
+	#profile form a#add {
+		display: inline-table;
+		float: left;
 		}
 		
 /* Intranet */
