--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,20 @@
 	header a {
 		color: #FFFFFF;
 		}
+	.slideshow{
+		height: 325px;
+		}
+	.img_border{
+		border: 2px solid #F36235;
+		}
+	.caption {
+		float: left;
+		}
+	#pager{
+		margin-top: 15px;
+		float: right;
+		cursor: pointer;
+		}
 		
 	footer {
 		background: #DEDEDE;
@@ -28,7 +42,7 @@
 		}
 		
 	#news {
-		margin-top: 40px;
+		margin-top: 10px;
 		float: left;
 		}
 		
@@ -166,16 +180,20 @@
 		}
 	
 	#hero {
-		margin-bottom: 30px;
+		margin-bottom: 0px;
 		margin-top: -30px;
+		display: block;
 		}
 		
 	h2 {
-		font: 28px "warnock-pro-1","warnock-pro-2", serif;
+		margin-bottom: 20px;
+		font: 32px "ff-meta-web-pro-1","ff-meta-web-pro-2",sans-serif;
+/* 		font: 28px "warnock-pro-1","warnock-pro-2", serif; */
 		}
 		
 	h2.intranet{
 		margin-top: 50px;
+		margin-bottom: 0px;
 		font: 24px "ff-meta-web-pro-1","ff-meta-web-pro-2",sans-serif;
 		}
 	
@@ -214,7 +232,7 @@
 		float: left;
 		clear: both;
 		}
-		
+	
 	article,
 	aside {
 		margin-bottom: 30px;
@@ -368,4 +386,26 @@
 		margin-top: -33px;
 		font-size: 12px;
 		color: #FFFFFF;
+		}
+
+/* About */
+	#section_header{
+		padding-bottom: 0px;
+		margin-bottom: 0px;
+		border-bottom: 1px solid #cdcdcd;
+		}
+	#section_header h2{
+		margin-top: 10px;
+		margin-bottom: 5px;
+		}
+	
+	#side_nav{
+		background-color: #f2f2f2;
+		}
+	#side_nav ul{
+		padding:20px;
+		list-style: none;
+		}
+	#side_nav ul li{
+		
 		}
