--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,6 +264,7 @@
  
 	#side_nav {
 		background-color: #f2f2f2;
+		padding-bottom: 8px;
 		}
 		
 	#side_nav ul {
@@ -522,6 +523,10 @@
 		opacity: 0;
 		}
 		
+	li.studio a {
+		color: #333333;
+		}
+		
 	.studio:hover .overlay {
 		cursor: pointer;
 		display: block;
@@ -529,6 +534,11 @@
 		}
 		
 	.professor {
+		float: left;
+		clear: both;
+		}
+		
+	figure {
 		float: left;
 		clear: both;
 		}
@@ -561,6 +571,10 @@
 		display: block;
 		}
 		
+	span.right.year {
+		font-size: 12px;
+		}
+		
 	p.course_description:not(:last-child) {
 		margin-bottom: 20px;
 		}
@@ -577,10 +591,7 @@
 		color: #B94929;
 		}
 		
-	#side_nav ul li{
-		line-height: 160%;
-		}
-		
 	#projects {
 		margin-top: 30px;
+		clear: both;
 		}
