--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,7 +310,7 @@
 		}
 	nav#global ul.hover_nav{
 		position: absolute;
-		top:100px;
+		background-color: #F49308;
 		}
 		
 	/* Post-hero sub-navigation options on Index */
@@ -319,6 +319,23 @@
 		font-size: 16px !important;
 		margin-bottom: 10px;
 		}
+		
+/**
+ * Footer
+ *
+ */
+ footer {
+	 margin-top: 50px;
+	 }
+ footer div ul{
+ 	margin-top: 20px;
+ 	list-style: none;
+ 	color: #999;
+	 }
+ footer div ul li{
+	 float: left;
+	 padding-right: 50px;
+	 }
 		
 /**
  * Content Page Side-Navigation
