--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,35 +308,55 @@
 		float: left;
 		}
 		
-	nav#global > ul > a > li {
+	nav#global > ul > li {
 		/* width: 70px; */ /* why is this commented? */
 		-webkit-transition: background 0.2s ease-in-out;
 		border-left: 1px solid #F2A919;
 		padding: 40px 35px 5px 10px;
 		position: relative;
-		min-width: 50px;
-		height: 100%;
+		min-width: 60px;
+		height: 20px;
 		float: left;
 		}
 	
-	nav#global > ul > :first-child > li{
+	nav#global > ul > :first-child > li {
 		padding-right: 55px;
 		}
 		
-	nav#global > ul > a > li:hover {
+	nav#global > ul > li:hover {
 		background: #f47d1c;
 		}
 		
-	nav#global > ul > a > li.selected {
+	nav#global > ul > li.selected {
 		background: #F49308;
 		}
 		
-	nav#global > ul > a > li:first-child {
+	nav#global > ul > li:first-child {
 		border-left: 1px solid #F2A919 !important;
+		width: 70px;
 		}
 		
-	nav#global > ul > a > li:last-child {
+	nav#global > ul > li:last-child {
 		margin-right: 0;
+		}
+		
+	nav#global > ul > li > a {
+		position: absolute;
+		height: 80px;
+		width: 100%;
+		z-index: 4;
+		left: 0;
+		top: 0;
+		}
+		
+	nav#global > ul > li > a > span {
+		padding-left: 10px; 
+		margin-top: 40px;
+		float: left;
+		}
+		
+	nav#global > ul > li > a:hover {
+		color: #FFFFFF;
 		}
 		
 	nav#global ul.hover_nav {
@@ -353,16 +373,21 @@
 		top: 0;
 		}
 		
-	nav#global ul.hover_nav > li {
+	nav#global ul.hover_nav > li,
+	nav#global ul.hover_nav > a > li {
 		padding-left: 10px;
-		line-height: 160%;
+		line-height: 2;
+		}
+		
+	nav#global ul.hover_nav > a:hover {
+		color: #FFFFFF;
 		}
 	
-	nav#global > ul > a > li.selected ul.hover_nav {
+	nav#global > ul > li.selected ul.hover_nav {
 		background-color: #F49308;
 		}
 	
-	nav#global > ul > a > li:hover ul.hover_nav {
+	nav#global > ul > li:hover ul.hover_nav {
 		-webkit-transition: opacity .2s ease, visibility .1s ease, top .15s ease;
 		-o-transition: opacity .2s ease, visibility .1s ease, top .15s ease;
 		transition: opacity .2s ease, visibility .1s ease, top .15s ease;
