--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -486,8 +486,8 @@
 		}
 		
 	nav#global ul.hover_nav li:hover {
-/* 		color: #FFF; */
-font-weight: bold;
+		/*  color: #FFFFFF; */
+		font-weight: bold;
 		}
 		
 	nav#global ul.hover_nav a {
@@ -690,9 +690,13 @@ font-weight: bold;
 		}
 		
 /**
- * Content Page Misc.
+ * Content Pages
  *
  */	
+ 	#content section {
+ 		float: left;
+ 		}
+ 
 	h2.inside {
 		margin-bottom: 8px;
 		margin-top: 10px;
@@ -714,15 +718,77 @@ font-weight: bold;
 		color: #333;
 		}
 		
-	span.pull_quote {
-		padding-bottom: 0px;
-		font-style: italic;
-		padding-top: 20px;
-		font-size: 18px;
-		display: block;
-		width: 200px;
-		color: #999;
+	p.sidenote {
+		background: url('../img/sprites.png') 0 -20px no-repeat;
+		width: 200px !important;
+		padding-left: 10px;
+		font-size: 12px;
+		color: #F36235;
 		float: left;
+		}
+		
+	/* PAGE: What is Design? */
+	dl {
+		margin-bottom: 20px;
+		float: left;
+		}
+		
+	dl dt {
+		font-size: 21px;
+		color: #F36235;
+		float: left;
+		}
+		
+	dl dt#dictionary {
+		color: #F49308;
+		}
+		
+	dl span {
+		margin: 7px 0 0 5px;
+		color: #999999;
+		float: left;
+		}
+		
+	dl span.part {
+		font-style: italic;
+		}
+		
+	dd {
+		margin-top: 8px;
+		clear: both;
+		float: left;
+		}
+		
+	dd ol li {
+		-webkit-transition: color 0.2s ease-in-out;
+		margin-bottom: 8px;
+		color: #CCCCCC;
+		}
+		
+	dd ol li:hover {
+		color: #333333;
+		}
+				
+	section#dict_definition p.sidenote {
+		margin-top: 9px;
+		}
+		
+	section#school_mission p {
+		background: url('../img/def-bg.png');
+		padding-top: 7px;
+		line-height: 30px;
+		font-size: 18px;
+		color: #666666;
+		}
+		
+	section#school_mission p em {
+		-webkit-transition: color 0.2s ease-in-out;
+		font-style: normal;
+		color: #AAAAAA;
+		}
+		
+	section#school_mission p:hover em {
+		color: #F36235;
 		}
 		
 /**
@@ -800,31 +866,31 @@ font-weight: bold;
  		
 	/* Fallback "View More" styling for if infinite
 		 scroll doesn't work/JS is disabled */
-	#news nav {
+	nav#bottom {
 		background: #F2A919;
 		margin-top: 20px;
 		}
 	
-	#news nav a {
+	nav#bottom a {
 		color: #FFFFFF;
 		display: block;
 		}
 		
-	#news nav span#older {
+	nav#bottom span#older {
 		-webkit-transition: background 0.2s ease-in-out;
 		padding: 10px;
 		float: right;
 		}
 		
-	#news nav span#older:hover {
+	nav#bottom span#older:hover {
 		background: #D98B00;
 		}
 		
-	#news nav span#older span {
+	nav#bottom span#older span {
 		float: left;
 		}
 		
-	#news nav a span:last-child {
+	nav#bottom a span:last-child {
 		margin: 1px 0 0 5px;
 		float: left;
 		}
@@ -1314,7 +1380,6 @@ font-weight: bold;
 		width: auto;
 		float: left;
 		}
-
 
 /**
  * Animations
