--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,6 +195,10 @@
 		list-style: none;
 		}
 		
+	.relativity figure {
+		position: relative;
+		}
+		
 	.relativity figcaption {
 		padding: 0 15px 10px 15px;
 		}
@@ -217,6 +221,24 @@
 		
 	.relativity li .sub_related figure:not(:last-child) {
 		margin-bottom: 4px;
+		}
+		
+	/* Overlay for videos in relativity bar */
+	.relativity .video {
+		-webkit-mask: url('../img/video.png') no-repeat;
+		-webkit-transition: background 0.2s ease-in-out;
+		background-position: center;
+		background: #666666;
+		position: absolute;
+		height: 75px;
+		width: 75px;
+		left: 72px;
+		top: 6px;
+		}
+		
+	.relativity figure.video_wrapper:hover .video {
+		background: #F2A919;
+		cursor: pointer;
 		}
 		
 /**
